--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Signup Page</title>
     <style>
         body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+            font-family: 'Arial', sans-serif;
+            background: url('https://images.unsplash.com/photo-1496181133206-80ce9b88a853') no-repeat center center fixed;
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,17 +16,19 @@
             margin: 0;
         }
         .container {
-            background-color: #ffffff;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             text-align: center;
             width: 100%;
             max-width: 400px;
+            backdrop-filter: blur(10px);
         }
         .container h2 {
             margin-bottom: 20px;
-            color: #333;
+            color: #2c3e50;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
         }
         .container form {
             display: flex;
@@ -37,32 +40,39 @@
             border: 1px solid #ddd;
             border-radius: 5px;
             font-size: 16px;
+            transition: all 0.3s;
+        }
+        .container form input:focus {
+            border-color: #3498db;
+            box-shadow: 0 0 8px rgba(52, 152, 219, 0.5);
         }
         .container form button {
             padding: 15px;
-            background-color: #3498db;
+            background: linear-gradient(45deg, #ff6b6b, #ff4757);
             color: #fff;
             border: none;
-            border-radius: 5px;
+            border-radius: 50px;
             font-size: 16px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: all 0.3s;
         }
         .container form button:hover {
-            background-color: #2980b9;
+            background: linear-gradient(45deg, #ff4757, #ff6b6b);
+            transform: scale(1.05);
         }
         .welcome-container {
             display: none;
-            background-color: #ffffff;
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             text-align: center;
             width: 100%;
             max-width: 400px;
+            backdrop-filter: blur(10px);
         }
         .welcome-container h2 {
-            color: #333;
+            color: #2c3e50;
         }
         .welcome-container p {
             color: #666;
